# DatalogInterpreter

./: Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommentAutomata.cpp  CommentAutomata.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  IDAutomata.cpp  IDAutomata.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  README.md  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomata.cpp  StringAutomata.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  lab1  (+5 more)
Lab5PassOffCases/: out.txt
lab1.dSYM/Contents/Resources/DWARF/: lab1
lab2.dSYM/Contents/Resources/DWARF/: lab2
lab3.dSYM/Contents/Resources/DWARF/: lab3
lab4.dSYM/Contents/Resources/DWARF/: lab4
lab5.dSYM/Contents/Resources/DWARF/: lab5
project1-exampleIO/: inputxx.txt
